Begin creating DBController

--- a/views/email/email.html
+++ b/views/email/email.html
@@ -16,7 +16,7 @@
     <img class="ax-center my-10 w-48" src="cid:logo" />
     <div class="card p-6 p-lg-10 space-y-4">
       <h1 class="h3 text-center fw-700">
-        Olá, Lívia!
+        Olá, {{NOME}}!
       </h1>
       <p class="text-center">
         Recebemos um pedido de recuperação de senha.<br>
@@ -24,7 +24,7 @@
       </p>
       <div class="text-center">
         Seu código de segurança:
-        <h2 class="bg-orange rounded text-center text-white fw-700" style="max-width: 160px; padding: 1%;">9 9 9 9 9 9</h2>
+        <h2 class="bg-orange rounded text-center text-white fw-700" style="max-width: 160px; padding: 1%;">{{CODIGO}}</h2>
         <br>
 
         <a class="btn bg-orange p-3 fw-700" href="https://app.bootstrapemail.com/templates">Recuperar Senha</a>
