Add password recovery / Improve project structure

--- a/views/email_templates/recovery-dev.html
+++ b/views/email_templates/recovery-dev.html
@@ -6,12 +6,16 @@
       background-color: #F38723;
    }
 
+   .bg-lightorange {
+      background-color: #FFE6D2;
+   }
+
    .btn.bg-orange:hover{
       background-color: #DA6E0A;
    }
  </style>
 </head>
-<body class="bg-light">
+<body class="bg-lightorange">
   <div class="container">
     <img class="ax-center my-10 w-48" src="cid:logo" />
     <div class="card p-6 p-lg-10 space-y-4">
