--- a/res/css/main.css
+++ b/res/css/main.css
@@ -1,1 +1,77 @@
 @import url("variables.css");
+
+.btn-logout {
+    background-color: var(--logout-background-color) !important;
+    color: white !important;
+}
+
+.btn-logout:hover {
+    background-color: var(--logout-hover-background-color) !important;
+}
+
+#timer {
+    color: var(--light-black);
+    font-family: SF-Bold;
+    margin-right: 2vw;
+}
+
+.row {
+    margin-top: 10%;
+}
+
+.card {
+    border: none;
+    box-shadow: 0px 0px 50px 0px rgba(222, 168, 127, 0.25);
+    border-radius: 20px;
+    background-color: var(--card-background);
+    width: 80%;
+    transition: 400ms;
+}
+
+.card:hover { 
+    transition: 400ms;
+    transform: scale(1.1);
+}
+
+.card-img {
+    width: 100%;
+    border-radius: 20px 20px 0 0;
+    aspect-ratio: 2 / 1;
+}
+
+.card-selected {
+    background-color: var(--card-selected);
+}
+
+.icon {
+    width: 80px;
+    height: 80px;
+    color: var(--text-color);
+}
+
+.card-selected > .icon{
+    color: white;
+}
+
+h2 {
+    font-weight: bold;
+    font-family: 'SF-Rounded-Regular';
+}
+
+.card-body > p {
+    color: var(--light-gray);
+    margin-bottom: 15%;
+}
+
+.btn-card {
+    background: var(--card-selected) !important;
+    color: white !important;
+}
+
+.btn-card:hover {
+    background-color: var(--card-btn-hover) !important;
+}
+
+footer {
+    color: var(--light-gray);
+}
