--- a/res/css/variables.css
+++ b/res/css/variables.css
@@ -3,8 +3,14 @@
   --card-background: #FFF1E3;
   --card-selected: rgba(244, 129, 23, 0.5);
   --text-color: #F38723;
+
+  --light-orange: #FFF1E3;
+  --dark-orange: #D35A36;
+  --dark-orange-hover: #BA411D;
+
   --light-black: #1B1B1B;
   --light-gray: #898989;
+
   --btn-hover-color: #DA6E0A;
   --card-btn-hover: #F48117;
   --logout-background-color: #FF9C9C;
