--- a/res/css/main.css
+++ b/res/css/main.css
@@ -1,5 +1,9 @@
 @import url("variables.css");
 
+html, body {
+    height: 100%;
+}
+
 .btn-logout {
     background-color: var(--logout-background-color) !important;
     color: white !important;
@@ -15,8 +19,8 @@
     margin-right: 2vw;
 }
 
-.row {
-    margin-top: 10%;
+.row.v-space {
+    margin-top: 5%;
 }
 
 .card {
@@ -24,13 +28,15 @@
     box-shadow: 0px 0px 50px 0px rgba(222, 168, 127, 0.25);
     border-radius: 20px;
     background-color: var(--card-background);
-    width: 80%;
+    width: 85%;
     transition: 400ms;
 }
 
-.card:hover { 
-    transition: 400ms;
-    transform: scale(1.1);
+@media (min-width: 992px) {
+    .card:hover { 
+        transition: 400ms;
+        transform: scale(1.1);
+    }
 }
 
 .card-img {
@@ -74,4 +80,5 @@ h2 {
 
 footer {
     color: var(--light-gray);
+    background-color: rgba(0, 0, 0, 0.05);
 }
