Add working reports /Add working PDF export

--- a/res/css/reports.css
+++ b/res/css/reports.css
@@ -73,16 +73,25 @@ a.details {
 }
 
 .type-style {
-    width: 167px;
+    width: 100%;
     color: var(--dark-orange);
 }
 
-.form-check-input {
+.radio {
+    background-color: var(--card-background) !important;
+}
+
+.radio:checked {
     background-color: var(--dark-orange) !important;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23FFF1E3'/%3e%3c/svg%3e") !important;
 }
 
 thead {
     position: sticky;
     top: 0;
     background-color: white;
+}
+
+.card {
+    max-height: 100% !important;
 }
